# cose

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: crates-release.yml  fuzz.yml  release-preflight.yml  rust-ci.yml
conformance/vectors/: cose-key.json  cose-sign1.json  manifest.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cose_key.rs  cose_sign1.rs  multikey_to_cose.rs
proto/reallyme/cose/v1/: cose.proto
scripts/: check_release_readiness.mjs
src/: error.rs  lib.rs
src/algorithm/: map_from_cose.rs  mod.rs
src/key/: convert.rs  derive_kid.rs  map_algorithm.rs  mod.rs
src/limits/: mod.rs  validate.rs
src/multikey/: convert.rs  mod.rs
src/policy/: mod.rs  validate.rs
src/sign1/: build_sig_structure.rs  convert_ecdsa_signature.rs  mod.rs  sign.rs  verify.rs
tests/: cose.rs
tests/cose_suite/: conformance_vector_tests.rs  cose_key_tests.rs  cose_private_key_tests.rs  detached_reject_wrong_payload_tests.rs  detached_roundtrip_tests.rs  interop_verify_tests.rs  kid_derive_tests.rs  kid_tests.rs  malicious_cbor_tests.rs  multikey_tests.rs  multikey_to_cose_tests.rs  platform_consumer_tests.rs  rfc9052_9053_profile_tests.rs  roundtrip_eddsa_tests.rs  roundtrip_es256k_tests.rs  roundtrip_p256_tests.rs  signing_algorithm_coverage_tests.rs  support.rs  tamper_reject_tests.rs
tools/vector-audit/: Cargo.toml
tools/vector-audit/src/: main.rs
