# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-cose"
version = "0.1.1"
description = "Audit-facing COSE helpers for ReallyMe identity software."
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/reallyme/cose"
keywords = ["cose", "cbor", "signing", "identity", "credentials"]
categories = ["cryptography", "encoding"]
publish = true
include = [
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/conformance/**/*.json",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[features]
default = ["native"]
native = ["cose-crypto", "reallyme-crypto/native"]
wasm = ["cose-crypto", "reallyme-crypto/wasm"]
cose-crypto = [
    "reallyme-crypto/dispatch",
    "reallyme-crypto/ed25519",
    "reallyme-crypto/p256",
    "reallyme-crypto/p384",
    "reallyme-crypto/p521",
    "reallyme-crypto/secp256k1",
    "reallyme-crypto/sha2",
    "reallyme-crypto/x25519",
]

[dependencies]
ciborium = "0.2"
coset = "0.4.0"
reallyme-codec = { version = "0.1.1", default-features = false, features = ["cbor", "multikey"] }
reallyme-crypto = { version = "0.1.6", default-features = false }
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
large_include_file = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
