# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-cose-vector-audit"
version = "0.1.1"
edition = "2021"
rust-version = "1.96"
publish = false

[dependencies]
bs58 = "0.5"
ciborium = "0.2"
ed25519-dalek = "2"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace]
